--- a/CHALLENGEONE.css
+++ b/CHALLENGEONE.css
@@ -12,6 +12,7 @@ body {
     background: white;
     height: 350px;
     margin-top: 100px;
+    margin-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
 }
